tests/parse-fail/pointer_missing_pointee.fl.0.exp
Error: pointer_missing_pointee.fl(3,18): Expected type signature, but found: ;
pub mod pointer_missing_pointee {
    pub struct PointerMissingPointee {
        pub a : *;
                 ^ 
    }
}
